After autocleanup (partial)