@@ -18,7 +18,24 @@ package org.apache.maven.graph;
  * specific language governing permissions and limitations
  * under the License.
  */
-
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -26,7 +43,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-
 import org.apache.maven.execution.ProjectDependencyGraph;
 import org.apache.maven.project.DuplicateProjectException;
 import org.apache.maven.project.MavenProject;
@@ -41,9 +57,9 @@ import org.codehaus.plexus.util.dag.CycleDetectedException;
 public class DefaultProjectDependencyGraph
         implements ProjectDependencyGraph {
 
-    private ProjectSorter sorter;
+    private final ProjectSorter sorter;
 
-    private List<MavenProject> allProjects;
+    private final List<MavenProject> allProjects;
 
     /**
      * Creates a new project dependency graph based on the specified projects.
@@ -55,7 +71,7 @@ public class DefaultProjectDependencyGraph
     public DefaultProjectDependencyGraph(Collection<MavenProject> projects)
             throws CycleDetectedException, DuplicateProjectException {
         super();
-        this.allProjects = Collections.unmodifiableList(new ArrayList<>(projects));
+        this.allProjects = List.copyOf(projects);
         this.sorter = new ProjectSorter(projects);
     }
 
@@ -73,7 +89,7 @@ public class DefaultProjectDependencyGraph
             final Collection<MavenProject> projects)
             throws CycleDetectedException, DuplicateProjectException {
         super();
-        this.allProjects = Collections.unmodifiableList(new ArrayList<>(allProjects));
+        this.allProjects = List.copyOf(allProjects);
         this.sorter = new ProjectSorter(projects);
     }
 
