@@ -18,13 +18,29 @@ package org.apache.maven.repository;
  * specific language governing permissions and limitations
  * under the License.
  */
-
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
-
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.artifact.metadata.ArtifactMetadata;
 import org.apache.maven.artifact.repository.ArtifactRepository;
@@ -43,7 +59,7 @@ public class DelegatingLocalArtifactRepository
 
     private LocalArtifactRepository ideWorkspace;
 
-    private ArtifactRepository userLocalArtifactRepository;
+    private final ArtifactRepository userLocalArtifactRepository;
 
     public DelegatingLocalArtifactRepository(ArtifactRepository artifactRepository) {
         this.userLocalArtifactRepository = artifactRepository;
@@ -100,7 +116,7 @@ public class DelegatingLocalArtifactRepository
 
         versions.addAll(userLocalArtifactRepository.findVersions(artifact));
 
-        return Collections.unmodifiableList(new ArrayList<>(versions));
+        return List.copyOf(versions);
     }
 
     public String pathOfLocalRepositoryMetadata(ArtifactMetadata metadata, ArtifactRepository repository) {
